[Fix] -> Customizer footer device icons vertically align.

--- a/inc/customizer/custom-controls/assets/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/unminified/custom-controls-rtl.css
@@ -1226,3 +1226,10 @@ span.select2-container.select2-container--default.select2-container--open li.sel
   border-color: #ddd;
   border-radius: 0;
 }
+
+/* Vetically align customizer footer device icons */
+.wp-full-overlay-footer .devices-wrapper .preview-desktop,
+.wp-full-overlay-footer .devices-wrapper .preview-tablet,
+.wp-full-overlay-footer .devices-wrapper .preview-mobile {
+  vertical-align: middle;
+}
